# advocate

./: .gitattributes  IMPROVEMENTS.md  README.md  advocate.kin  component_map.yaml  constraints.yaml  pact.yaml  pyproject.toml  task.md
.github/workflows/: release-validation.yml
.kin/: code-map.json  config  index.json
.pact/: audit.jsonl  state.json
.pact/archive/advocate-six-persona-adversarial-review/: sops.md  (+1 more)
.pact/test-gen/: analysis.json  security_audit.md
contracts/src_advocate_cli/: interface.json  interface.py
contracts/src_advocate_engine/: interface.py
contracts/src_advocate_models/: interface.json  interface.py
contracts/src_advocate_provider/: interface.py
contracts/src_advocate_report/: interface.py
decomposition/: tree.json
docs/: index.html
src/advocate/: __init__.py  cli.py  engine.py  models.py  personas.py  report.py
src/src_advocate_cli/: cli.py
src/src_advocate_engine/: engine.py
src/src_advocate_provider/: provider.py
src/src_advocate_report/: report.py
tests/: test_dependency_metadata.py  test_recent_model_compat.py
tests/smoke/: test_advocate_cli.py  test_advocate_engine.py  test_advocate_models.py  test_advocate_provider.py  test_advocate_report.py
tests/src_advocate_cli/: contract_test.py  contract_test_suite.json
tests/src_advocate_engine/: contract_test.py  contract_test_suite.json
tests/src_advocate_models/: contract_test.py  contract_test_suite.json
tests/src_advocate_provider/: contract_test.py  contract_test_suite.json
tests/src_advocate_report/: contract_test.py  contract_test_suite.json
(+8 files in other folders)
